@@ -1,28 +1,28 @@
+import org.gradle.internal.jvm.Jvm
+
 plugins {
     id 'java-library'
 }
 
-sourceCompatibility = 1.8
 
-configurations {
-    pom
-}
+sourceCompatibility = JavaVersion.VERSION_1_8
 
 apply from: '../publish.gradle'
 apply from: '../jacoco.gradle'
 
 dependencies {
     if (JavaVersion.current() <= JavaVersion.VERSION_1_8) {
-        testImplementation files(org.gradle.internal.jvm.Jvm.current().getToolsJar())
+        testImplementation files(Jvm.current().getToolsJar())
     }
     implementation project(":srcless-annotations")
-    implementation("com.squareup:kotlinpoet-javapoet:1.10.2")
-    testImplementation("com.google.testing.compile:compile-testing:0.19")
-    implementation("org.dmfs:jems2-testing:2.6.0")
+    implementation "com.squareup:kotlinpoet-javapoet:1.12.0"
+    implementation "org.dmfs:jems2:2.8.0"
+    testImplementation "com.google.testing.compile:compile-testing:0.19"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs = ['--add-opens', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED']
 }
